// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Temp details reducer should set the temp capacity 1`] = `
Object {
  "capacity": 20,
  "description": "",
  "endDate": "July 19, 2118",
  "endDateInput": "July 19, 2018",
  "endDateMoment": "2118-07-19T19:30:00.000Z",
  "endTime": "19:30",
  "notGoingResponses": false,
  "startDate": "2018-07-19",
  "startDateInput": "July 19, 2018",
  "startDateMoment": "2018-07-19T19:30:00.000Z",
  "startTime": "19:30",
  "title": "",
}
`;

exports[`Temp details reducer should set the temp description 1`] = `
Object {
  "capacity": "",
  "description": "new description",
  "endDate": "July 19, 2118",
  "endDateInput": "July 19, 2018",
  "endDateMoment": "2118-07-19T19:30:00.000Z",
  "endTime": "19:30",
  "notGoingResponses": false,
  "startDate": "2018-07-19",
  "startDateInput": "July 19, 2018",
  "startDateMoment": "2018-07-19T19:30:00.000Z",
  "startTime": "19:30",
  "title": "",
}
`;

exports[`Temp details reducer should set the temp end date 1`] = `
Object {
  "capacity": "",
  "description": "",
  "endDate": "January 1, 2018",
  "endDateInput": "July 19, 2018",
  "endDateMoment": "2118-07-19T19:30:00.000Z",
  "endTime": "19:30",
  "notGoingResponses": false,
  "startDate": "2018-07-19",
  "startDateInput": "July 19, 2018",
  "startDateMoment": "2018-07-19T19:30:00.000Z",
  "startTime": "19:30",
  "title": "",
}
`;

exports[`Temp details reducer should set the temp end date input 1`] = `
Object {
  "capacity": "",
  "description": "",
  "endDate": "July 19, 2118",
  "endDateInput": "January 1, 2018",
  "endDateMoment": "2118-07-19T19:30:00.000Z",
  "endTime": "19:30",
  "notGoingResponses": false,
  "startDate": "2018-07-19",
  "startDateInput": "July 19, 2018",
  "startDateMoment": "2018-07-19T19:30:00.000Z",
  "startTime": "19:30",
  "title": "",
}
`;

exports[`Temp details reducer should set the temp end date moment 1`] = `
Object {
  "capacity": "",
  "description": "",
  "endDate": "July 19, 2118",
  "endDateInput": "July 19, 2018",
  "endDateMoment": "January 1, 2018",
  "endTime": "19:30",
  "notGoingResponses": false,
  "startDate": "2018-07-19",
  "startDateInput": "July 19, 2018",
  "startDateMoment": "2018-07-19T19:30:00.000Z",
  "startTime": "19:30",
  "title": "",
}
`;

exports[`Temp details reducer should set the temp end time 1`] = `
Object {
  "capacity": "",
  "description": "",
  "endDate": "July 19, 2118",
  "endDateInput": "July 19, 2018",
  "endDateMoment": "2118-07-19T19:30:00.000Z",
  "endTime": "13:45",
  "notGoingResponses": false,
  "startDate": "2018-07-19",
  "startDateInput": "July 19, 2018",
  "startDateMoment": "2018-07-19T19:30:00.000Z",
  "startTime": "19:30",
  "title": "",
}
`;

exports[`Temp details reducer should set the temp not going responses 1`] = `
Object {
  "capacity": "",
  "description": "",
  "endDate": "July 19, 2118",
  "endDateInput": "July 19, 2018",
  "endDateMoment": "2118-07-19T19:30:00.000Z",
  "endTime": "19:30",
  "notGoingResponses": true,
  "startDate": "2018-07-19",
  "startDateInput": "July 19, 2018",
  "startDateMoment": "2018-07-19T19:30:00.000Z",
  "startTime": "19:30",
  "title": "",
}
`;

exports[`Temp details reducer should set the temp start date 1`] = `
Object {
  "capacity": "",
  "description": "",
  "endDate": "July 19, 2118",
  "endDateInput": "July 19, 2018",
  "endDateMoment": "2118-07-19T19:30:00.000Z",
  "endTime": "19:30",
  "notGoingResponses": false,
  "startDate": "January 1, 2018",
  "startDateInput": "July 19, 2018",
  "startDateMoment": "2018-07-19T19:30:00.000Z",
  "startTime": "19:30",
  "title": "",
}
`;

exports[`Temp details reducer should set the temp start date input 1`] = `
Object {
  "capacity": "",
  "description": "",
  "endDate": "July 19, 2118",
  "endDateInput": "July 19, 2018",
  "endDateMoment": "2118-07-19T19:30:00.000Z",
  "endTime": "19:30",
  "notGoingResponses": false,
  "startDate": "2018-07-19",
  "startDateInput": "January 1, 2018",
  "startDateMoment": "2018-07-19T19:30:00.000Z",
  "startTime": "19:30",
  "title": "",
}
`;

exports[`Temp details reducer should set the temp start date moment 1`] = `
Object {
  "capacity": "",
  "description": "",
  "endDate": "July 19, 2118",
  "endDateInput": "July 19, 2018",
  "endDateMoment": "2118-07-19T19:30:00.000Z",
  "endTime": "19:30",
  "notGoingResponses": false,
  "startDate": "2018-07-19",
  "startDateInput": "July 19, 2018",
  "startDateMoment": "January 1, 2018",
  "startTime": "19:30",
  "title": "",
}
`;

exports[`Temp details reducer should set the temp start time 1`] = `
Object {
  "capacity": "",
  "description": "",
  "endDate": "July 19, 2118",
  "endDateInput": "July 19, 2018",
  "endDateMoment": "2118-07-19T19:30:00.000Z",
  "endTime": "19:30",
  "notGoingResponses": false,
  "startDate": "2018-07-19",
  "startDateInput": "July 19, 2018",
  "startDateMoment": "2018-07-19T19:30:00.000Z",
  "startTime": "13:45",
  "title": "",
}
`;

exports[`Temp details reducer should set the temp title 1`] = `
Object {
  "capacity": "",
  "description": "",
  "endDate": "July 19, 2118",
  "endDateInput": "July 19, 2018",
  "endDateMoment": "2118-07-19T19:30:00.000Z",
  "endTime": "19:30",
  "notGoingResponses": false,
  "startDate": "2018-07-19",
  "startDateInput": "July 19, 2018",
  "startDateMoment": "2018-07-19T19:30:00.000Z",
  "startTime": "19:30",
  "title": "new title",
}
`;
